Polish Spring Batch Infrastructure tests